# seth-return

./: .gitignore  README.md  gradio.ipynb  pyproject.toml  seth-return.ipynb
corpus/: Dreams, Evolution and Value Fulfillment 2.txt  The Nature Of Personal Reality.epub  The Nature of the Psyche.doc  The Unknown Reality 1.doc  The Unknown Reality 2.doc  The Way Toward Health.txt
