[tool.poetry]
name = "lang-chain"
version = "0.1.0"
description = ""
authors = ["Kelvin Ng <hoishing@gmail.com>"]
readme = "README.md"
packages = [{ include = "lang_chain" }]

[tool.poetry.dependencies]
python = "^3.10, <3.11"
langchain = "^0.0.142"
ipykernel = "^6.22.0"
openai = "^0.27.4"
python-dotenv = "^1.0.0"
bs4 = "^0.0.1"
chromadb = "^0.3.21"
tiktoken = "^0.3.3"
pypdf = "^3.8.1"
unstructured = "^0.6.5"
memory-profiler = "^0.61.0"
gradio = "^3.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
